--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="form-group">
                         <label for="issueDescInput">Description</label>
                         <input type="text" class="form-control"
-                        id="issueDescInput" placeholder="Describe the issue ..."
+                        id="issueDescInput" placeholder="Describe the issue ...">
                     </div>
                     <div class="form-group">
                         <label for="issueDescInput">Severity</label>
