--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body onload="fetchIssues()">
     <div class="container">
-      <h1>JS Issue Tracker <small>by CodingTheSmartWay.com</small></h1>
+      <h1>JS Issue Tracker</h1>
       <div class="jumbotron">
         <h3>Add New Issue:</h3>
         <form id="issueInputForm">
