--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="footer">
-        <p>&copy CodingTheSmartWay.com</p>
+        <p>&copy</p>
       </div>
     </div>
     <script src="main.js"></script>
